adjusted format, added responsive style, fixed alignment, added fake contacts

--- a/style.css
+++ b/style.css
@@ -1,81 +1,113 @@
 /* By Dagan Fitzsimmons*/
-header{
-    text-align: center;
-    border: 2px solid black;
-    background-color: aliceblue;
-    margin-bottom: 5px;
-}
+/* Main Styles */
+    html{
+        border: 4px solid black;
+    }
+    header{
+        text-align: center;
+        border: 2px solid black;
+        background-color: aliceblue;
+        margin-bottom: 5px;
+    }
 
-body{
-    background-color: rgb(163, 180, 196);
-}
+    body{
+        background-color: rgb(163, 180, 196);
+        
+    }
 
-article{
-    border: 2px solid black;
-    background-color: aliceblue;
-    width: 80%;
-    margin: 2px;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 15px;
-    padding: .5%;
-}
+    article{
+        border: 2px solid black;
+        background-color: aliceblue;
+        width: 80%;
+        margin: 2px;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-bottom: 15px;
+        padding: .5%;
+    }
 
-footer{
-    text-align: center;
-    border: 2px solid black;
-    background-color: aliceblue;
-    margin-top: 5px;
-}
+    footer{
+        text-align: center;
+        border: 2px solid black;
+        background-color: aliceblue;
+        margin-top: 5px;
+    }
 
-a 
-{
-    text-decoration: none;
-    color: black;
-}
+    a 
+    {
+        text-decoration: none;
+        color: black;
+    }
 
-a:hover 
-{
-    text-decoration: underline;
-    color: black;
-}
+    a:hover 
+    {
+        text-decoration: underline;
+        color: black;
+    }
 
-a:visited
-{
-    text-decoration: none;
-    color: black;
-}
+    a:visited
+    {
+        text-decoration: none;
+        color: black;
+    }
 
-img{
-    float: left;
-    margin: 15px;
-    width: 20%;
-    border: 2px solid black;
-}
+    img{
+        float: left;
+        margin: 15px;
+        margin-right: 30px;
+        width: 23%;
+        border: 2px solid black;
+    }
 
-.classes:after { 
-    content: ""; 
-    display: table;
-    clear: both; 
-}
+    .classes:after { 
+        content: ""; 
+        display: table;
+        clear: both; 
+    }
 
-.taken, .willtake{
-    text-align: center;
-    float:left;
-    width: 25%;
-    margin-right:8px;
-    border: 2px solid black;
-    background-color: aliceblue;
-    margin-bottom: 5px;
-    padding-left: -5px;
-    padding-right: 5px;
-}
+    .taken, .willtake{
+        text-align: center;
+        float:left;
+        width: 25%;
+        margin-right:8px;
+        border: 2px solid black;
+        background-color: aliceblue;
+        margin-bottom: 5px;
+        padding-right: 5px;
+    }
 
-ul li{
-    list-style-position: inside;
-    text-decoration: none;
-}
+    .taken{
+        margin-left: 25%;
+    }
 
-h2{
-    text-decoration: underline;
-}
+    ul li{
+        list-style-position: inside;
+        text-decoration: none;
+    }
+
+    h2{
+        text-decoration: underline;
+    }
+
+    p{
+        text-indent: 3%;
+    }
+
+/* Responsive Styles */
+    @media screen and (max-width:568px) {
+        .taken, .willtake{
+            width: 70%;
+            margin-left: 15%;
+        }
+        img{
+            width: 70%;
+            float:none;
+            margin-left: 15%;
+        }
+        article{
+            padding: 10px;
+        }
+        p{
+            text-indent: 10%;
+        }
+    }
